datafusion/physical-plan/src/match_recognize/snapshots/start_anchor.snap
---
source: datafusion/physical-plan/src/match_recognize/pattern_matcher.rs
expression: ^
---
0: ^->1
1*:
