datafusion/physical-plan/src/match_recognize/snapshots/start_anchor_a.snap
---
source: datafusion/physical-plan/src/match_recognize/pattern_matcher.rs
expression: ^ A
---
0: ^->1
1: A->2
2*:
